SOURCE/objects/Treatment_History__c.object
<CustomObject>
    <fields>
        <fullName>Date_of_Episode__c</fullName>
        <label>Date of Episode</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Facility__c</fullName>
        <label>Facility</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Length_of_Sobriety_Achieved__c</fullName>
        <label>Length of Sobriety Achieved</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Length_of_Stay__c</fullName>
        <label>Length of Stay</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Level_Of_Care__c</fullName>
        <label>Level Of Care</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Detox</fullName>
                </value>
                <value>
                    <fullName>Residential</fullName>
                </value>
                <value>
                    <fullName>IOP</fullName>
                </value>
                <value>
                    <fullName>Day-Night/PHP</fullName>
                </value>
                <value>
                    <fullName>OP</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Pre_Assessment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Pre-Assessment</label>
        <referenceTo>PreAssesment__c</referenceTo>
        <relationshipLabel>Treatment History</relationshipLabel>
        <relationshipName>Treatment_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Type_of_Discharge__c</fullName>
        <label>Type of Discharge</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Completed Successfully</fullName>
                </value>
                <value>
                    <fullName>AMA</fullName>
                </value>
                <value>
                    <fullName>Therapeutic Discharge</fullName>
                </value>
                <value>
                    <fullName>Therapeutic Transfer</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Treatment History</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>TH-{000}</displayFormat>
        <label>Treatment History Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Treatment History</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>